# subproc

./: .ccls  CMakeLists.txt  README.md  install.sh  motion.conf  run.sh
lib/mycutils/: CMakeLists.txt
lib/subproc/: CMakeLists.txt
src/: main.c  mycutils.c  mycutils.h  subproc.c  subproc.h
